bynkc/tests/fixtures/positive/149_cron_acl_error/src/reaper.karn
context reaper

type ReaperError = enum { StorageUnavailable }

service sweeper from cron {
  on schedule("*/5 * * * *") () -> Effect[Result[(), ReaperError]] {
    Err(StorageUnavailable)
  }
}
